--- a/MediaMonksExercice/Resource/Info.plist
+++ b/MediaMonksExercice/Resource/Info.plist
@@ -34,6 +34,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>Environment</key>
+	<dict>
+		<key>baseUrl</key>
+		<string>$(BASE_URL)</string>
+	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
